# aitx

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_adapter.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RESEARCH.md
docs/plans/: 2026-03-01-aitx-swarm-design.md  2026-03-01-aitx-swarm-router-design.md
examples/: core_pipeline.py  mesh_consumer.py  mesh_provider.py  schema_conversion.py
src/aitx/: __init__.py  convert.py  decorator.py
src/aitx/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai_chat.py
src/aitx/bridge/: __init__.py  dispatcher.py
src/aitx/cli/: __init__.py
src/aitx/ir/: __init__.py  introspect.py  types.py
src/aitx/mesh/: __init__.py  client.py  discovery.py  node.py  router.py
src/aitx/schema/: __init__.py  normalizer.py  ref_resolver.py  strict_mode.py
tests/: test_adapters_edge.py  test_async.py  test_cli.py  test_cli_extra.py  test_client.py  test_convert.py  test_convert_extra.py  test_core.py  test_decorator_extra.py  test_discovery.py  test_gemini.py  test_gemini_extra.py  test_introspect.py  test_introspect_extra.py  test_mesh.py  test_router.py  test_schema.py  test_schema_extra.py
tests/fixtures/: weather_mcp.json
